CDS tests