@@ -28,6 +28,7 @@
  *          the archived class with the same name is not loaded.
  * @requires vm.cds
  * @library /test/lib
+ * @enablePreview
  * @compile test-classes/RewriteBytecodesInline.java test-classes/Util.java test-classes/Point.java test-classes/WithInlinedField.java RewriteBytecodesInlineTest.java
  * @build jdk.test.whitebox.WhiteBox
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
@@ -51,7 +52,7 @@ public class RewriteBytecodesInlineTest {
 
     OutputAnalyzer output = TestCommon.exec(appJar,
                     // command-line arguments ...
-                    "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
+                    "--enable-preview",
                     use_whitebox_jar,
                     "-XX:+UnlockDiagnosticVMOptions",
                     "-XX:+WhiteBoxAPI",
