@@ -27,11 +27,12 @@
  * @summary Hello World test for dynamic archive
  * @requires vm.cds
  * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds /test/hotspot/jtreg/runtime/cds/appcds/test-classes
+ * @enablePreview
  * @compile ../test-classes/HelloInlineClassApp.java
  * @build jdk.test.whitebox.WhiteBox
  * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar hello_inline.jar HelloInlineClassApp HelloInlineClassApp$Point HelloInlineClassApp$Rectangle
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox jdk.test.whitebox.WhiteBox$WhiteBoxPermission
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xbootclasspath/a:. HelloDynamicInlineClass
+ * @run main/othervm -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xbootclasspath/a:. HelloDynamicInlineClass
  */
 
 import jdk.test.lib.helpers.ClassFileInstaller;
@@ -60,8 +61,7 @@ public class HelloDynamicInlineClass extends DynamicArchiveTestBase {
         String appJar = ClassFileInstaller.getJarPath("hello_inline.jar");
         String mainClass = "HelloInlineClassApp";
         dump2(baseArchiveName, topArchiveName,
-             "-XX:+EnableValhalla",
-             "-XX:+EnablePrimitiveClasses",
+             "--enable-preview",
              "-Xlog:cds",
              "-Xlog:cds+dynamic=debug",
              "-cp", appJar, mainClass)
@@ -69,8 +69,7 @@ public class HelloDynamicInlineClass extends DynamicArchiveTestBase {
                     output.shouldContain("Written dynamic archive 0x");
                 });
         run2(baseArchiveName, topArchiveName,
-            "-XX:+EnableValhalla",
-            "-XX:+EnablePrimitiveClasses",
+            "--enable-preview",
             "-Xlog:class+load",
             "-Xlog:cds+dynamic=debug,cds=debug",
             "-cp", appJar, mainClass)
